<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Multi Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="clear">Clear</string>
    <string name="backspace">\u2190</string>
    <string name="Parenthesisleft">(</string>
    <string name="ParenthesisRight">)</string>
    <string name="equals">=</string>
    <string name="mult">×</string>
    <string name="div">÷</string>
    <string name="dot">.</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mod">%</string>
    <string name="pow">^</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="discount1">Find discount value before applied discount</string>
    <string name="discount2">Find discount value after applied discount</string>
    <string name="compute">Compute</string>
    <string name="discount1a">Enter discounted value</string>
    <string name="discount1b">Enter discount that was applied</string>
    <string name="percentsign">%</string>
    <string name="dollarsign">$</string>
    <string name="discounter">Discounter</string>
    


</resources>
