<?xml version="1.0" encoding="utf-8"?> 
<ScrollView 
      xmlns:android="http://schemas.android.com/apk/res/android" 
      android:id="@+id/scroll" 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
		<LinearLayout
		    android:id="@+id/linearLayout1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:clickable="true" >
			<EditText
			    android:id="@+id/etInput1"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:focusable="false"
			    android:clickable="false"
			    android:textColor="#000000"
				android:textCursorDrawable="@null"
			    android:inputType="none">
			</EditText>
		</LinearLayout> 
		<LinearLayout 
		    android:orientation="vertical"
			android:layout_width="match_parent" 
			android:layout_height="wrap_content" 
			android:id="@+id/linearLayout2" 
			android:layout_marginTop="3pt" >
		</LinearLayout> 
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="match_parent" 
			android:textSize="12pt" 
			android:id="@+id/tvResult" 
			android:gravity="center_horizontal">
		</TextView> 
		<LinearLayout
		    android:layout_width="match_parent" 
			android:layout_height="wrap_content" 
			android:id="@+id/linearLayoutA" 
			android:layout_marginTop="0pt" 
			android:layout_marginLeft="0pt" 
			android:layout_marginRight="0pt"> 
			<Button
				android:layout_height="wrap_content" 
				android:layout_width="match_parent" 
				android:layout_weight="1" 
				android:text="@string/clear"  
				android:textSize="16pt" 
				android:id="@+id/btnClear"> 
			</Button>
			<Button
				android:layout_height="wrap_content" 
				android:layout_width="match_parent" 
				android:layout_weight="3" 
				android:text="@string/backspace"  
				android:textSize="16pt" 
				android:id="@+id/btnBackSpace"> 
			</Button>
		</LinearLayout>
		<LinearLayout 
			android:layout_width="match_parent" 
			android:layout_height="wrap_content" 
			android:id="@+id/linearLayout5" 
			android:layout_marginTop="0pt" 
			android:layout_marginLeft="0pt" 
			android:layout_marginRight="0pt"> 
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="match_parent" 
				android:layout_weight="1" 
				android:text="@string/seven" 
				android:textSize="16pt" 
				android:id="@+id/btnSeven"> 
			</Button> 
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="match_parent" 
				android:layout_weight="1" 
				android:text="@string/eight" 
				android:textSize="16pt" 
				android:id="@+id/btnEight"> 
			</Button> 
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="match_parent" 
				android:layout_weight="1" 
				android:text="@string/nine"  
				android:textSize="16pt" 
				android:id="@+id/btnNine">
			</Button> 
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="match_parent" 
				android:layout_weight="1" 
				android:text="@string/div"  
				android:textSize="16pt" 
				android:id="@+id/btnDiv"> 
			</Button>
		</LinearLayout>
		<LinearLayout 
			android:layout_width="match_parent" 
			android:layout_height="wrap_content" 
			android:id="@+id/linearLayout4" 
			android:layout_marginTop="0pt" 
			android:layout_marginLeft="0pt" 
			android:layout_marginRight="0pt"> 
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="match_parent" 
				android:layout_weight="1" 
				android:text="@string/four" 
				android:textSize="16pt" 
				android:id="@+id/btnFour"> 
			</Button> 
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="match_parent" 
				android:layout_weight="1" 
				android:text="@string/five" 
				android:textSize="16pt" 
				android:id="@+id/btnFive"> 
			</Button> 
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="match_parent" 
				android:layout_weight="1" 
				android:text="@string/six"  
				android:textSize="16pt" 
				android:id="@+id/btnSix">
			</Button> 
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="match_parent" 
				android:layout_weight="1" 
				android:text="@string/mult" 
				android:textSize="16pt" 
				android:id="@+id/btnMult"> 
			</Button> 
		</LinearLayout>
		<LinearLayout 
			android:layout_width="match_parent" 
			android:layout_height="wrap_content" 
			android:id="@+id/linearLayout3" 
			android:layout_marginTop="0pt" 
			android:layout_marginLeft="0pt" 
			android:layout_marginRight="0pt"> 
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="match_parent" 
				android:layout_weight="1" 
				android:text="@string/one"  
				android:textSize="16pt" 
				android:id="@+id/btnOne"> 
			</Button> 
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="match_parent" 
				android:layout_weight="1" 
				android:text="@string/two"  
				android:textSize="16pt" 
				android:id="@+id/btnTwo"> 
			</Button> 
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="match_parent" 
				android:layout_weight="1" 
				android:text="@string/three"  
				android:textSize="16pt" 
				android:id="@+id/btnThree">
			</Button> 
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="match_parent" 
				android:layout_weight="1" 
				android:text="@string/sub" 
				android:textSize="16pt" 
				android:id="@+id/btnSub"> 
			</Button> 
		</LinearLayout>
		<LinearLayout 
			android:layout_width="match_parent" 
			android:layout_height="wrap_content" 
			android:id="@+id/linearLayout6" 
			android:layout_marginTop="0pt" 
			android:layout_marginLeft="0pt" 
			android:layout_marginRight="0pt"> 
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="match_parent" 
				android:layout_weight="1" 
				android:text="@string/dot" 
				android:textSize="16pt" 
				android:id="@+id/btnDot"> 
			</Button> 
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="match_parent" 
				android:layout_weight="1" 
				android:text="@string/zero"
				android:textSize="16pt" 
				android:id="@+id/btnZero"> 
			</Button> 
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="match_parent" 
				android:layout_weight="1" 
				android:text="@string/equals" 
				android:textSize="16pt" 
				android:id="@+id/btnEquals">
			</Button> 
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="match_parent" 
				android:layout_weight="1" 
				android:text="@string/add" 
				android:textSize="16pt" 
				android:id="@+id/btnAdd"> 
			</Button> 
		</LinearLayout>
		<LinearLayout 
			android:layout_width="match_parent" 
			android:layout_height="wrap_content" 
			android:id="@+id/linearLayout7" 
			android:layout_marginTop="0pt" 
			android:layout_marginLeft="0pt" 
			android:layout_marginRight="0pt"> 
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="match_parent" 
				android:layout_weight="1" 
				android:text="@string/mod" 
				android:textSize="16pt" 
				android:id="@+id/btnMod"> 
			</Button> 
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="match_parent" 
				android:layout_weight="1" 
				android:text="@string/pow"
				android:textSize="16pt" 
				android:id="@+id/btnPow"> 
			</Button> 
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="match_parent" 
				android:layout_weight="1" 
				android:text="@string/Parenthesisleft" 
				android:textSize="16pt" 
				android:id="@+id/btnPLeft">
			</Button> 
			<Button 
				android:layout_height="wrap_content" 
				android:layout_width="match_parent" 
				android:layout_weight="1" 
				android:text="@string/ParenthesisRight" 
				android:textSize="16pt" 
				android:id="@+id/btnPRight"> 
			</Button> 
		</LinearLayout>
		<TextView 
			android:layout_height="fill_parent" 
			android:layout_width="fill_parent" 
			android:layout_marginLeft="5pt" 
			android:layout_marginRight="5pt"
			 android:layout_marginBottom="5pt"
			android:textSize="12pt" 
			android:layout_marginTop="3pt" 
			android:id="@+id/tvDebug" 
			android:gravity="center_horizontal"> 
		</TextView>
	</LinearLayout>
</ScrollView>